Updates with new ui
added /chat link to explore new ui for bot

--- a/chatbot/templates/chatbot/index.html
+++ b/chatbot/templates/chatbot/index.html
@@ -18,6 +18,15 @@ background-size: 100% 100%;
 }
 </style>
 
+<script type="text/javascript">
+    
+    var me = {};
+    me.avatar = "{% static 'chatbot/img/user-pic.png' %}";
+
+    var you = {};
+    you.avatar = "{% static 'chatbot/img/bot.png' %}";
+
+</script>
 
 
 <!DOCTYPE html>
