--- a/chatbot/static/chatbot/css/chat/style.css
+++ b/chatbot/static/chatbot/css/chat/style.css
@@ -37,9 +37,9 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.14);
 }
 .floating-chat.expand {
-  width: 250px;
-  max-height: 400px;
-  height: 400px;
+  width: 45%;
+  max-height: 80%;
+  height: 70%;
   border-radius: 5px;
   cursor: auto;
   opacity: 1;
@@ -147,11 +147,11 @@ body {
   -moz-animation: show-chat-odd 0.15s 1 ease-in;
   -webkit-animation: show-chat-odd 0.15s 1 ease-in;
   float: right;
-  margin-right: 45px;
+  margin-right: 58px;
   color: #0AD5C1;
 }
 .floating-chat .chat .messages li.other:before {
-  right: -45px;
+  right: -58px;
   background-image: url(../img/bot.png);
 }
 .floating-chat .chat .messages li.other:after {
@@ -163,11 +163,11 @@ body {
   -moz-animation: show-chat-even 0.15s 1 ease-in;
   -webkit-animation: show-chat-even 0.15s 1 ease-in;
   float: left;
-  margin-left: 45px;
+  margin-left: 58px;
   color: #0EC879;
 }
 .floating-chat .chat .messages li.self:before {
-  left: -45px;
+  left: -58px;
   background-image: url(../img/user-pic.png);
 }
 .floating-chat .chat .messages li.self:after {
