--- a/chatbot/templates/chatbot/chat.html
+++ b/chatbot/templates/chatbot/chat.html
@@ -12,25 +12,93 @@
 
   
 </head>
+<style type="text/css">
+.spinner {
+  margin: 0;
+  width: 30px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  background: rgba(0,0,0,1);
+}
+ 
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0)
+  }
+  40% {
+    -webkit-transform: scale(1.0)
+  }
+}
+
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+</style>
+
+
+
+
+
+
+
+
+
 
 <body>
 
   <div class="floating-chat">
     <i class="fa fa-comments" aria-hidden="true"></i>
     <div class="chat">
+    	<!-- Box Header -->
         <div class="header">
             <span class="title">
-                Enovia Support Bot
+                EVA - Enovia Virtual Assistant
             </span>
             <button>
                 <i class="fa fa-times" aria-hidden="true"></i>
             </button>
                          
         </div>
+        <!-- Message Body -->
         <ul class="messages">
-            <li class="other">Hi! I am Enovia Support Bot. I am here to help! :)</li>
+            <li class="other">Hi! I am EVA. I can help you with the below categories:<br>
+             - User Activation/De-activation
+            </li>
 
         </ul>
+        
+        
+        <!-- Box Footer -->
         <div class="footer">
             <div class="text-box" contenteditable="true" disabled="true"></div>
             <button id="sendMessage">send</button>
